--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Vistoria Fácil</string>
+    <string name="app_name">vistoriaFacil_v2</string>
     <string name="button_vistorias">VISTORIA</string>
     <string name="button_Vistoriador">VISTORIA INTELIGENTE</string>
     <string name="button_ConsultaRapida">CONSULTA RÁPIDA</string>
