--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,10 @@
     <string name="app_name">vistoriaFacil_v2</string>
     <string name="button_vistorias">VISTORIA</string>
     <string name="button_vistPassoApasso">VISTORIA RÁPIDA: <i>Utilize se não tem dúvida sobre a edificação e os conceitos</i></string>
-    <string name="button_Vistoriador">VISTORIA SEGURA: <i>Utilize se tiver alguma dúvida sobre a edificação e os conceitos</i>. <u><i>Extremamete recomendado para INICIANTES</i></u></string>
-    <string name="button_ConsultaRapida">CONSULTA RÁPIDA: <i>Consulte todos os bizus e NTs</i></string>
+    <string name="button_VistoriaInteligente_Title">VISTORIA INTELIGENTE</string>
+    <string name="button_VistoriaInteligente_Sub"><i>Passo a passo para realizar vistorias</i></string>
+    <string name="button_ConsultaRapida">CONSULTA RÁPIDA</string>
+    <string name="button_ConsultaRapidaSub"><i>Consulte todos os bizus e NTs</i></string>
     <string name="button_passoaPasso">SOLICITAR VISTORIA: PASSO-A-PASSO: <i>Guia para o contribuinte</i></string>
     <string name="button_certPrevia">CERTIFICAÇÃO PRÉVIA</string>
 
