--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -428,6 +428,30 @@ o processo e gerar o número do protocolo.</string>
 <b>Obs:</b> verificar sempre na Norma (ou no menu “Vistoria Inteligente”, deste aplicativo), se há a exigência da Brigada. Ex: em silos com aprovação antiga há a obrigação de treinamento de brigada, porém com a atualização da Norma, está recomendado (não é mais obrigatório).
 
     </string>
+    <string name="txt_vistProcSimpCertPrevia">
+    Como esta vistoria se enquadra em Processo Simplificado para Certificação Prévia (para ver mais sobre o tipo de processo, consulte a
+        opção <u>Processos</u> no menu principal), haverá apenas conferência de documentos via site;
+    \n\nDocumentos para conferência:
+    \n<b>-</b> Anexo G;
+    \n<b>-</b> Nota fiscal Extintore(s);
+    \n<b>-</b> Foto Extintore(s);
+    \n<b>-</b> Foto Fachada;
+    \n<b>-</b> Comprovante da taxa de Inspeção.
+
+    </string>
+
+    <string name="txt_vistProcSimpCertFac">
+    Como esta vistoria se enquadra em Processo Simplificado para Certificação Facilitada (para ver mais sobre o tipo de processo, consulte a
+        opção <u>Processos</u> no menu principal), <u>não haverá sequer conferência de documentos</u>. O próprio responsável ou
+        proprietário poderá anexar os documentos no site e imprimir o CERCON;
+    \n\nDocumentos anexados:
+        \n<b>-</b> Anexo G;
+        \n<b>-</b> Nota fiscal Extintore(s);
+        \n<b>-</b> Foto Extintore(s);
+        \n<b>-</b> Foto Fachada;
+        \n<b>-</b> Comprovante da taxa de Inspeção.
+
+    </string>
 
     <string name="txt_vistPaP1500HidTxt1">
         Ao chegar no local, informar o motivo da visita e solicitar o projeto aprovado pelo CBMGO e um responsável que conheça a edificação para acompanhar a vistoria;</string>
